{
  "version": 4,
  "terraform_version": "0.14.7",
  "serial": 30,
  "lineage": "2847927d-1f48-607b-5268-bbdfb9ddea10",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0adff588256440b88",
            "domain": "vpc",
            "id": "eipalloc-08e693a7bac60b536",
            "network_border_group": "ap-south-1",
            "network_interface": "eni-0fa023a714249cf34",
            "private_dns": "ip-192-168-0-222.ap-south-1.compute.internal",
            "private_ip": "192.168.0.222",
            "public_dns": "ec2-65-1-89-151.ap-south-1.compute.amazonaws.com",
            "public_ip": "65.1.89.151",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0549f835b389b3214",
            "domain": "vpc",
            "id": "eipalloc-02b66af8ac4aeaedd",
            "network_border_group": "ap-south-1",
            "network_interface": "eni-08873cd73239639b9",
            "private_dns": "ip-192-168-1-106.ap-south-1.compute.internal",
            "private_ip": "192.168.1.106",
            "public_dns": "ec2-13-235-176-255.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.235.176.255",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-066eb3d7c1e45850c",
            "domain": "vpc",
            "id": "eipalloc-00763f05e47ed08d5",
            "network_border_group": "ap-south-1",
            "network_interface": "eni-0bcc60c3ca085e868",
            "private_dns": "ip-192-168-2-173.ap-south-1.compute.internal",
            "private_ip": "192.168.2.173",
            "public_dns": "ec2-65-0-160-160.ap-south-1.compute.amazonaws.com",
            "public_ip": "65.0.160.160",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:376368920129:internet-gateway/igw-079a1e13906e0df8e",
            "id": "igw-079a1e13906e0df8e",
            "owner_id": "376368920129",
            "tags": {
              "Name": "eks-internet-gateway-testing"
            },
            "vpc_id": "vpc-0d33376fe29b912e8"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08e693a7bac60b536",
            "id": "nat-0b54c45d08595a319",
            "network_interface_id": "eni-0fa023a714249cf34",
            "private_ip": "192.168.0.222",
            "public_ip": "65.1.89.151",
            "subnet_id": "subnet-0ccfb19434becf516",
            "tags": {
              "Name": "eks-nat_Gateway-1-testing"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.gw",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02b66af8ac4aeaedd",
            "id": "nat-028638f5f5f2dc30b",
            "network_interface_id": "eni-08873cd73239639b9",
            "private_ip": "192.168.1.106",
            "public_ip": "13.235.176.255",
            "subnet_id": "subnet-0bd9cffd7181fe811",
            "tags": {
              "Name": "eks-nat_Gateway-2-testing"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.gw",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00763f05e47ed08d5",
            "id": "nat-01459fab7e9a2c2f8",
            "network_interface_id": "eni-0bcc60c3ca085e868",
            "private_ip": "192.168.2.173",
            "public_ip": "65.0.160.160",
            "subnet_id": "subnet-0d4407dbcca001bd7",
            "tags": {
              "Name": "eks-nat_Gateway-3-testing"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.gw",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "internet-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-025db5a6786d61a04",
            "owner_id": "376368920129",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-079a1e13906e0df8e",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "eks-public_route_table-testing",
              "state": "public"
            },
            "vpc_id": "vpc-0d33376fe29b912e8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.gw",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "nat-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0063c071247e5c1ec",
            "owner_id": "376368920129",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0b54c45d08595a319",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "eks-nat_route_table-1-testing",
              "state": "public"
            },
            "vpc_id": "vpc-0d33376fe29b912e8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_nat_gateway.gw",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0ce5f4d127614188c",
            "owner_id": "376368920129",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-028638f5f5f2dc30b",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "eks-nat_route_table-2-testing",
              "state": "public"
            },
            "vpc_id": "vpc-0d33376fe29b912e8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_nat_gateway.gw",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0ef8cc787b5bfad2e",
            "owner_id": "376368920129",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-01459fab7e9a2c2f8",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "eks-nat_route_table-3-testing",
              "state": "public"
            },
            "vpc_id": "vpc-0d33376fe29b912e8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_nat_gateway.gw",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-032c808b20020f1dc",
            "route_table_id": "rtb-0063c071247e5c1ec",
            "subnet_id": "subnet-0ed667cc541ff2bca"
          },
          "dependencies": [
            "module.vpc.aws_nat_gateway.gw",
            "module.vpc.aws_route_table.nat-route",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-089c369139c98c813",
            "route_table_id": "rtb-0ce5f4d127614188c",
            "subnet_id": "subnet-0335759fc259e5c76"
          },
          "dependencies": [
            "module.vpc.aws_nat_gateway.gw",
            "module.vpc.aws_route_table.nat-route",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e6badf5410614e1b",
            "route_table_id": "rtb-0ef8cc787b5bfad2e",
            "subnet_id": "subnet-0d1a00504bccd8a65"
          },
          "dependencies": [
            "module.vpc.aws_nat_gateway.gw",
            "module.vpc.aws_route_table.nat-route",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0121fa27b57eed24e",
            "route_table_id": "rtb-025db5a6786d61a04",
            "subnet_id": "subnet-0ccfb19434becf516"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.gw",
            "module.vpc.aws_route_table.internet-route",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a0e808a4ed3fc205",
            "route_table_id": "rtb-025db5a6786d61a04",
            "subnet_id": "subnet-0bd9cffd7181fe811"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.gw",
            "module.vpc.aws_route_table.internet-route",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01f08ec98698a643b",
            "route_table_id": "rtb-025db5a6786d61a04",
            "subnet_id": "subnet-0d4407dbcca001bd7"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.gw",
            "module.vpc.aws_route_table.internet-route",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:376368920129:subnet/subnet-0ed667cc541ff2bca",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "192.168.4.0/24",
            "id": "subnet-0ed667cc541ff2bca",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "376368920129",
            "tags": {
              "Name": "fargate-subnet-1-testing",
              "kubernetes.io/cluster/main-testing": "shared",
              "kubernetes.io/role/internal-elb": "1",
              "state": "private"
            },
            "vpc_id": "vpc-0d33376fe29b912e8"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:376368920129:subnet/subnet-0335759fc259e5c76",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "192.168.5.0/24",
            "id": "subnet-0335759fc259e5c76",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "376368920129",
            "tags": {
              "Name": "fargate-subnet-2-testing",
              "kubernetes.io/cluster/main-testing": "shared",
              "kubernetes.io/role/internal-elb": "1",
              "state": "private"
            },
            "vpc_id": "vpc-0d33376fe29b912e8"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:376368920129:subnet/subnet-0d1a00504bccd8a65",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "192.168.6.0/24",
            "id": "subnet-0d1a00504bccd8a65",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "376368920129",
            "tags": {
              "Name": "fargate-subnet-3-testing",
              "kubernetes.io/cluster/main-testing": "shared",
              "kubernetes.io/role/internal-elb": "1",
              "state": "private"
            },
            "vpc_id": "vpc-0d33376fe29b912e8"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:376368920129:subnet/subnet-0ccfb19434becf516",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "192.168.0.0/24",
            "id": "subnet-0ccfb19434becf516",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "376368920129",
            "tags": {
              "Name": "node-group-subnet-1-testing",
              "kubernetes.io/cluster/main-testing": "shared",
              "kubernetes.io/role/elb": "1",
              "state": "public"
            },
            "vpc_id": "vpc-0d33376fe29b912e8"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:376368920129:subnet/subnet-0bd9cffd7181fe811",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "192.168.1.0/24",
            "id": "subnet-0bd9cffd7181fe811",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "376368920129",
            "tags": {
              "Name": "node-group-subnet-2-testing",
              "kubernetes.io/cluster/main-testing": "shared",
              "kubernetes.io/role/elb": "1",
              "state": "public"
            },
            "vpc_id": "vpc-0d33376fe29b912e8"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:376368920129:subnet/subnet-0d4407dbcca001bd7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "192.168.2.0/24",
            "id": "subnet-0d4407dbcca001bd7",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "376368920129",
            "tags": {
              "Name": "node-group-subnet-3-testing",
              "kubernetes.io/cluster/main-testing": "shared",
              "kubernetes.io/role/elb": "1",
              "state": "public"
            },
            "vpc_id": "vpc-0d33376fe29b912e8"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:376368920129:vpc/vpc-0d33376fe29b912e8",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-021f2b9611b9c653f",
            "default_route_table_id": "rtb-01d6d481ff0895716",
            "default_security_group_id": "sg-017abb6b12f0ef350",
            "dhcp_options_id": "dopt-68ed3e03",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0d33376fe29b912e8",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-01d6d481ff0895716",
            "owner_id": "376368920129",
            "tags": {
              "Name": "main-testing-vpc",
              "kubernetes.io/cluster/main-testing": "shared"
            }
          }
        }
      ]
    }
  ]
}